fixed bug with empty container and vertical alignment of portfolio only filter

--- a/src/style/filter.sass
+++ b/src/style/filter.sass
@@ -34,6 +34,7 @@
     .filter__name
       color: rgb(255, 110, 126)
   &.filter__container_single
+    padding: 3px 0 3px
     & ul
       font-size: 12px
       line-height: 1
